--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="./css/styles.css">
     <title>JCD BBQ</title>
 </head>
 <body>
@@ -14,8 +14,8 @@
             <span></span>
             <span></span> 
             <ul class="flex col a-i-c" id="menu">
-                <a href="index.html"><li>Home</li></a>
-                <a href="menu.html"><li>Menu</li></a>
+                <a href="./index.html"><li>Home</li></a>
+                <a href="./menu.html"><li>Menu</li></a>
                 <a href="tel:+1 503 644 7378"><li>Contact</li></a>
                 <a href="https://www.chownow.com/order/33571/locations/50353" target="_blank"><li id="order-online">Order Online</li></a>
             </ul>
@@ -52,7 +52,7 @@
                 </div>
             </div>   
             <div id="double-down">
-                <img src="/images/double-down.png" alt="Down">
+                <img src="./images/double-down.png" alt="Down">
             </div> 
         </section>
         <section class="flex col j-c-sb" id="second-section">
