changing paths for images

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 </div>
             </div>   
             <div id="double-down">
-                <img src="./images/double-down.png" alt="Down">
+                <img src="images/double-down.png" alt="Down">
             </div> 
         </section>
         <section class="flex col j-c-sb" id="second-section">
