responsive design: width 375

--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
                         <span class="orange-font">Open</span><br>
                         4PM - 11:30PM
                     </p>
-                    <br>
                     <p>
                         <span class="orange-font">Closed</span> on <br>
-                        Wednesdays
+                        Wednesdays <br>
+                        <span id="holidays">& public holidays</span>
                     </p>
                 </div>
             </div>   
