--- a/menu.html
+++ b/menu.html
@@ -8,14 +8,22 @@
 </head>
 <body>
     <header>
-        <nav>
+        <nav id="nav-portrait">
             <input type="checkbox" />
             <span></span>
             <span></span>
             <span></span> 
             <ul class="flex col a-i-c" id="menu">
-                <a href="index.html"><li>Home</li></a>
-                <a href="menu.html"><li>Menu</li></a>
+                <a href="./index.html"><li>Home</li></a>
+                <a href="./menu.html"><li>Menu</li></a>
+                <a href="tel:+1 503 644 7378"><li>Contact</li></a>
+                <a href="https://www.chownow.com/order/33571/locations/50353" target="_blank"><li id="order-online">Order Online</li></a>
+            </ul>
+        </nav>
+        <nav id="nav-landscape">
+            <ul class="" id="menu-landscape">
+                <a href="./index.html"><li>Home</li></a>
+                <a href="./menu.html"><li>Menu</li></a>
                 <a href="tel:+1 503 644 7378"><li>Contact</li></a>
                 <a href="https://www.chownow.com/order/33571/locations/50353" target="_blank"><li id="order-online">Order Online</li></a>
             </ul>
