fixing landscape design

--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
                 <div class="relative" style="display: none;"></div>
                 <div id="white-background"></div>
                 <div id="footer">
-                    <p>Copyright &copy; 2023</p>
-                    <p>Web design & developer <a href="https://www.hayeong.website" target="_blank">Hayeong</a></p>
+                    <p class="white-font">Copyright &copy; 2023</p>
+                    <p>Web Design & Developer <a href="https://www.hayeong.website" target="_blank" class="white-font">Hayeong Pyeon</a></p>
                     <p>Icons by <a href="https://icons8.com/icons" target="_blank">ICON8</a> & Photos by <a href="https://www.pexels.com/" target="_blank">Pexels</a></p>
                 </div>    
             </div>
