--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/styles.css">
-    <title>JCD BBQ</title>
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />    <title>JCD BBQ</title>
 </head>
 <body>
     <header>
@@ -33,12 +33,20 @@
         <div class="background"></div>
         <div class="relative"></div>
         <section class="flex col j-c-c" id="first-section">
-            <div class="store-name">
+            <div class="store-name"
+            data-aos="fade-up" 
+            data-aos-offset="100"
+            data-aos-duration="2000"
+            data-aos-delay="200">
                 <h1 class="orange-font">JCD</h1>
                 <h1>BBQ</h1>   
                 <p>A Grill-iant experience awaits you.</p> 
             </div>
-            <div class="flex a-s-c" id="store-info">
+            <div class="flex a-s-c" id="store-info"
+            data-aos="fade-up" 
+            data-aos-offset="100"
+            data-aos-duration="2000"
+            data-aos-delay="800">
                 <div class="info flex a-i-c" id="address">
                     <p id="copyLink">
                         3482 SW <br>
@@ -64,7 +72,12 @@
             </div> 
         </section>
         <section class="flex col j-c-sb" id="second-section">
-            <div class="flex col j-c-c" id="first-part">
+            <div class="flex col j-c-c" id="first-part"
+            data-aos="fade" 
+            data-aos-offset="100"
+            data-aos-duration="2000"
+            data-aos-delay="400"
+            data-aos-once="false">
                 <div>
                     <div class="store-name">
                         <h1 class="orange-font">JCD</h1>
@@ -92,7 +105,12 @@
                 </div>    
             </div>
             <div class="flex col j-c-sb" id="second-part">
-                <div class="flex col a-s-c" id="map">
+                <div class="flex col a-s-c" id="map"
+                data-aos="fade" 
+                data-aos-offset="100"
+                data-aos-duration="2000"
+                data-aos-delay="1600"
+                data-aos-once="false">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2796.7637983105565!2d-122.81200852383432!3d45.49470103140336!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54950ea324c555b5%3A0x13c832d9a63f1fc1!2s3482%20SW%20Cedar%20Hills%20Blvd%2C%20Beaverton%2C%20OR%2097005!5e0!3m2!1sen!2sus!4v1697327348819!5m2!1sen!2sus" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     <a href="https://maps.app.goo.gl/uwiWTDG2AUU9Umd79" target="_blank">Open location on Google Map</a>
                     <div id="landscape-only">
@@ -133,8 +151,6 @@
     <footer>
 
     </footer>
-    
-</body>
     <script>
         document.getElementById("copyLink").addEventListener("click", function() {
             // Get the anchor's text content
@@ -155,5 +171,20 @@
             // Provide feedback to the user (optional)
             alert("Address copied!");
         });
+
+        window.onscroll = function() {scrollFunction()};
+
+        function scrollFunction() {
+            if (document.body.scrollTop > 400 || document.documentElement.scrollTop > 400) {
+                document.querySelector("header").style.opacity = "0";
+            } else {
+                document.querySelector("header").style.opacity = "1";
+            }
+        }
     </script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
+</body>
 </html>
