responsive design, fixing footer

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                     </p>
                 </div>    
             </div>
-            <div class="flex col j-c-sb" id="second-part">
+            <div class="flex col j-c-a" id="second-part">
                 <div class="flex col a-s-c" id="map"
                 data-aos="fade" 
                 data-aos-offset="100"
@@ -136,14 +136,14 @@
                         </p>
                     </div>
                 </div>
-                <div class="store-name" id="scroll-up">
+                <div class="store-name flex col j-c-c" id="scroll-up">
                     <h1 class="orange-font">JCD</h1>
                     <h1>BBQ</h1>    
                 </div>
                 <div class="relative" style="display: none;"></div>
                 <div id="white-background"></div>
             </div>
-            <div id="footer">
+            <div class="flex col j-c-c" id="footer">
                 <p class="white-font">Copyright &copy; 2023</p>
                 <p>Web Design & Developer <a href="https://www.hayeong.website" target="_blank" class="white-font">Hayeong Pyeon</a></p>
                 <p>Icons by <a href="https://icons8.com/icons" target="_blank">ICON8</a> & Photos by <a href="https://www.pexels.com/" target="_blank">Pexels</a></p>
@@ -204,6 +204,7 @@
             } else {
                 nextPageScroll = 844;
             }
+
             window.scrollTo({
                 top: nextPageScroll,
                 behavior: "smooth", 
