landscape homepage design - completed

--- a/menu.html
+++ b/menu.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="./css/styles.css">
     <title>JCD BBQ</title>
 </head>
 <body>
-    <header>
+    <header id="header-portrait">
         <nav id="nav-portrait">
             <input type="checkbox" />
             <span></span>
@@ -20,17 +20,19 @@
                 <a href="https://www.chownow.com/order/33571/locations/50353" target="_blank"><li id="order-online">Order Online</li></a>
             </ul>
         </nav>
+    </header>
+    <header id="header-landscape">
         <nav id="nav-landscape">
             <ul class="" id="menu-landscape">
                 <a href="./index.html"><li>Home</li></a>
                 <a href="./menu.html"><li>Menu</li></a>
-                <a href="tel:+1 503 644 7378"><li>Contact</li></a>
+                <a href="./contact.html"><li>Contact</li></a>
                 <a href="https://www.chownow.com/order/33571/locations/50353" target="_blank"><li id="order-online">Order Online</li></a>
             </ul>
         </nav>
     </header>
     <main>
-        <section class="flex col a-i-c j-c-sb" id="section-menu">
+        <section class="flex col a-i-c j-c-c" id="section-menu">
             <div id="full-menu">
                 <div class="meal-type" id="appetizer">
                     <h3 class="orange-font">Appetizer</h2>
