--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <ul class="" id="menu-landscape">
                 <a href="./index.html"><li>Home</li></a>
                 <a href="./menu.html"><li>Menu</li></a>
-                <a href="tel:+1 503 644 7378"><li>Contact</li></a>
+                <a href="./contact.html"><li>Contact</li></a>
                 <a href="https://www.chownow.com/order/33571/locations/50353" target="_blank"><li id="order-online">Order Online</li></a>
             </ul>
         </nav>
@@ -74,22 +74,54 @@
             </div> 
         </section>
         <section class="flex col j-c-sb" id="second-section">
-            <div class="flex col j-c-c" id="first-part"
-            data-aos="fade" 
-            data-aos-offset="100"
-            data-aos-duration="2000"
-            data-aos-delay="400"
-            data-aos-once="false">
+            <div class="flex col j-c-c" id="first-part">
                 <div>
                     <div class="store-name">
                         <h1 class="orange-font">JCD</h1>
                         <h1>BBQ</h1>    
                     </div>
-                    <div class="grid j-i-c a-i-c" id="images">
+                    <div class="grid j-i-c a-i-c" id="images"
+                    data-aos="fade" 
+                    data-aos-offset="100"
+                    data-aos-duration="2000"
+                    data-aos-delay="400"
+                    data-aos-once="false">
                         <div class="grid-item" id="grid-1"></div>
+                        <div class="grid-item landscape" id="g-1">
+                            <h4>
+                                Korean BBQ
+                            </h4>
+                            <p>
+                                A flavorful dining experience with table-side, perfectly- seared grilled meats.
+                            </p>
+                        </div>
                         <div class="grid-item" id="grid-2"></div>
+                        <div class="grid-item landscape" id="g-2">
+                            <h4>
+                                “Ban Chan”
+                            </h4>
+                            <p>
+                                Flavorful Korean side dishes, adds a delightful complement to your meal.
+                            </p>
+                        </div>
                         <div class="grid-item" id="grid-3"></div>
+                        <div class="grid-item landscape" id="g-3">
+                            <h4>
+                                “Ssam”
+                            </h4>
+                            <p>
+                                Korean “wrap” - make your own Ssam with your favorite ingredients and dipping sauce. 
+                            </p>
+                        </div>
                         <div class="grid-item" id="grid-4"></div>
+                        <div class="grid-item landscape" id="g-4">
+                            <h4>
+                                Kimchi Stew
+                            </h4>
+                            <p>
+                                Its fiery and tangy flavors offer a comforting contrast to the grilled meats. 
+                            </p>
+                        </div>
                     </div>    
                 </div>
                 <div id="welcome-message">
@@ -142,10 +174,39 @@
                 </div>
                 <div class="relative" style="display: none;"></div>
                 <div id="white-background"></div>
+                <div class="flex col" id="welcome">
+                    <div class="flex row" id="welcome-title"
+                    data-aos="fade" 
+                    data-aos-offset="100"
+                    data-aos-duration="2000"
+                    data-aos-delay="800"
+                    data-aos-once="false">
+                        <h1>
+                            Welcome to <br>
+                            <span id="jcdbbq">
+                                <span class="orange-font">JCD</span>BBQ
+                            </span>
+                        </h1>
+                        <p id="where">where Flavor and Tradition meet.</p>
+                    </div>
+                    <div
+                    data-aos="fade" 
+                    data-aos-offset="100"
+                    data-aos-duration="2000"
+                    data-aos-delay="1200"
+                    data-aos-once="false">
+                        <p id="subtitle">
+                            Dive into an authentic Korean BBQ experience, sizzle with excitement, <br> 
+                            and savor the essence of Korean cuisine at its finest. <br>
+                            Join us for a mouthwatering journey of grilled perfection <br>
+                            and discover the rich tapestry of flavors that define our restaurant.
+                        </p>
+                    </div>
+                </div>
             </div>
             <div class="flex col j-c-c" id="footer">
                 <p class="white-font">Copyright &copy; 2023</p>
-                <p>Web Design & Developer <a href="https://www.hayeong.website" target="_blank" class="white-font">Hayeong Pyeon</a></p>
+                <p>Web Design & Dev <a href="https://www.hayeong.website" target="_blank" class="white-font hayeong">Hayeong Pyeon</a></p>
                 <p>Icons by <a href="https://icons8.com/icons" target="_blank">ICON8</a> & Photos by <a href="https://www.pexels.com/" target="_blank">Pexels</a></p>
             </div>
         </section>
