--- a/menu.html
+++ b/menu.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <title>JCD BBQ</title>
 </head>
-<body class="body-black">
+<body class="body-whitesmoke">
     <header id="header-portrait">
         <nav id="nav-portrait">
             <input type="checkbox" />
