fix layout issues, add icons

--- a/index.html
+++ b/index.html
@@ -176,23 +176,29 @@
                 </div>
                 <div class="relative" style="display: none;"></div>
                 <div id="white-background"></div>
-                <div class="flex col" id="welcome">
-                    <div class="flex row" id="welcome-title">
-                        <h1>
-                            Welcome to <br>
-                            <span id="jcdbbq">
-                                <span class="orange-font">JCD</span>BBQ
-                            </span>
-                        </h1>
-                        <p id="where">where Flavor and Tradition meet.</p>
+                <div class="flex row" id="welcome">
+                    <div class="flex col" id="texts">
+                        <div class="flex row" id="welcome-title">
+                            <h1>
+                                Welcome to <br>
+                                <span id="jcdbbq">
+                                    <span class="orange-font">JCD</span>BBQ
+                                </span>
+                            </h1>
+                            <p id="where">where Flavor and Tradition meet.</p>
+                        </div>
+                        <div>
+                            <p id="subtitle">
+                                Dive into an authentic Korean BBQ experience, sizzle with excitement, <br> 
+                                and savor the essence of Korean cuisine at its finest. <br>
+                                Join us for a mouthwatering journey of grilled perfection <br>
+                                and discover the rich tapestry of flavors that define our restaurant.
+                            </p>
+                        </div>    
                     </div>
-                    <div>
-                        <p id="subtitle">
-                            Dive into an authentic Korean BBQ experience, sizzle with excitement, <br> 
-                            and savor the essence of Korean cuisine at its finest. <br>
-                            Join us for a mouthwatering journey of grilled perfection <br>
-                            and discover the rich tapestry of flavors that define our restaurant.
-                        </p>
+                    <div class="flex" id="icons">
+                        <img src="./images/Grill.png" alt="Grill" id="grill">
+                        <img src="./images/Soju.png" alt="Soju" id="soju">
                     </div>
                 </div>
             </div>
