--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
                         <h1>BBQ</h1>    
                     </div>
                     <div class="grid j-i-c a-i-c" id="images"
-                    data-aos="fade" 
+                    data-aos="fade-up" 
                     data-aos-offset="100"
-                    data-aos-duration="2000"
+                    data-aos-duration="1600"
                     data-aos-delay="400"
                     data-aos-once="false">
                         <div class="grid-item" id="grid-1"></div>
@@ -177,7 +177,12 @@
                 <div class="relative" style="display: none;"></div>
                 <div id="white-background"></div>
                 <div class="flex row" id="welcome">
-                    <div class="flex col" id="texts">
+                    <div class="flex col" id="texts"
+                    data-aos="fade" 
+                    data-aos-offset="100"
+                    data-aos-duration="2000"
+                    data-aos-delay="800"
+                    data-aos-once="false">
                         <div class="flex row" id="welcome-title">
                             <h1>
                                 Welcome to <br>
