--- a/menu.html
+++ b/menu.html
@@ -91,7 +91,7 @@
                     </div>    
                 </div>
             </div>
-            <div id="footer">
+            <div class="flex col j-c-c" id="footer">
                 <p>Copyright &copy; 2023</p>
                 <p>Web design & developer <a href="https://www.hayeong.website" target="_blank">Hayeong</a></p>
                 <p>Icons by <a href="https://icons8.com/icons" target="_blank">ICON8</a> & Photos by <a href="https://www.pexels.com/" target="_blank">Pexels</a></p>
