--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
             <span></span> 
             <ul class="flex col a-i-c" id="menu">
                 <a href="./index.html"><li>Home</li></a>
-                <a href="./menu.html"><li>Menu</li></a>
+                <a onclick="openPDF()"><li>Menu</li></a>
                 <a href="tel:+1 503 644 7378"><li>Contact</li></a>
                 <a href="https://www.chownow.com/order/33571/locations/50353" target="_blank"><li id="order-online">Order Online</li></a>
             </ul>
@@ -24,9 +24,9 @@
     </header>
     <header id="header-landscape">
         <nav id="nav-landscape">
-            <ul class="" id="menu-landscape">
+            <ul id="menu-landscape">
                 <a href="./index.html"><li>Home</li></a>
-                <a href="./menu.html"><li>Menu</li></a>
+                <a onclick="openPDF()"><li>Menu</li></a>
                 <a href="./contact.html"><li>Contact</li></a>
                 <a href="https://www.chownow.com/order/33571/locations/50353" target="_blank"><li id="order-online">Order Online</li></a>
             </ul>
@@ -112,6 +112,9 @@
             // Provide feedback to the user (optional)
             alert("Address copied!");
         });
+        function openPDF() {
+            window.open('./images/pdf/full-menu.pdf', '_blank');
+        }
     </script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
