update intro phrases

--- a/contact.html
+++ b/contact.html
@@ -113,7 +113,7 @@
             alert("Address copied!");
         });
         function openPDF() {
-            window.open('./images/pdf/full-menu.pdf', '_blank');
+            window.open('./images/pdf/JCD-menu.pdf', '_blank');
         }
     </script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
