--- a/index.html
+++ b/index.html
@@ -130,15 +130,11 @@
                 </div>
                 <div id="welcome-message">
                     <p class="orange-font">
-                        Step into a world of sizzling delights <br>
-                        and embrace the flavors of Korea <br id="no-break">
-                        at JCD BBQ.
+                        JCD has been a family owned and operating business since 2003 and strives to deliver the best authentic experience <br> in Korean barbecue.
                     </p>
                     <hr>
                     <p class="gray-font">
-                        Our Korean BBQ experience invites you to <br id="no-break">
-                        take charge of the grill, <br id="yes-break"> creating delicious <br id="no-break">
-                        memories with each perfectly seared bite. 
+                        JCD K-BBQ uses fresh quality ingredient made to order and offers a selection of premium meats, banchans (side dishes), traditional Korean favorites and specialties <br> from our family recipe. 
                     </p>
                 </div>    
             </div>
@@ -240,7 +236,7 @@
             alert("Address copied!");
         });
         function openPDF() {
-            window.open('./images/pdf/full-menu.pdf', '_blank');
+            window.open('./images/pdf/JCD-menu.pdf', '_blank');
         }
     </script>
 </body>
