replace logo and photos

--- a/index.html
+++ b/index.html
@@ -37,14 +37,12 @@
         <div class="background"></div>
         <div class="relative"></div>
         <section class="flex col j-c-c" id="first-section">
-            <div class="store-name"
+            <div class="flex j-c-c"
             data-aos="fade-up" 
             data-aos-offset="100"
             data-aos-duration="2000"
             data-aos-delay="200">
-                <h1 class="orange-font">JCD</h1>
-                <h1>BBQ</h1>   
-                <p>A Grill-iant experience awaits you.</p> 
+                <img src="./images/JCD-LOGO-w.png" alt="JCD Logo" id="logo-main"> 
             </div>
             <div class="flex a-s-c" id="store-info"
             data-aos="fade-up" 
@@ -79,9 +77,8 @@
         <section class="flex col j-c-sb" id="second-section">
             <div class="flex col j-c-c" id="first-part">
                 <div>
-                    <div class="store-name">
-                        <h1 class="orange-font">JCD</h1>
-                        <h1>BBQ</h1>    
+                    <div>
+                        <img src="./images/JCD-LOGO-w.png" alt="JCD Logo" id="logo-intro">  
                     </div>
                     <div class="grid j-i-c a-i-c" id="images"
                     data-aos="fade-up" 
@@ -93,37 +90,37 @@
                         <div class="grid-item" id="grid-1"></div>
                         <div class="grid-item landscape" id="g-1">
                             <h4>
-                                Korean BBQ
+                                Galbi
                             </h4>
                             <p>
-                                A flavorful dining experience with table-side, perfectly- seared grilled meats.
+                                Savor the essence of Korean BBQ with our signature Saeng Galbi experience.
                             </p>
                         </div>
                         <div class="grid-item" id="grid-2"></div>
                         <div class="grid-item landscape" id="g-2">
                             <h4>
-                                “Ban Chan”
+                                Bibimbap
                             </h4>
                             <p>
-                                Flavorful Korean side dishes, adds a delightful complement to your meal.
+                                A vibrant harmony of colors and flavors - seasoned vegetables, savory protein, and Gochujang.
                             </p>
                         </div>
                         <div class="grid-item" id="grid-3"></div>
                         <div class="grid-item landscape" id="g-3">
                             <h4>
-                                “Ssam”
+                                Bulgogi
                             </h4>
                             <p>
-                                Korean “wrap” - make your own Ssam with your favorite ingredients and dipping sauce. 
+                                Marinated beef grilled to perfection, allowing you to wrap each bite in a symphony of flavors. 
                             </p>
                         </div>
                         <div class="grid-item" id="grid-4"></div>
                         <div class="grid-item landscape" id="g-4">
                             <h4>
-                                Kimchi Stew
+                                Samgyeopsal
                             </h4>
                             <p>
-                                Its fiery and tangy flavors offer a comforting contrast to the grilled meats. 
+                                Experience the sizzling sensation of Korean BBQ with our Samgyeopsal adventure. 
                             </p>
                         </div>
                     </div>    
@@ -168,9 +165,8 @@
                         </p>
                     </div>
                 </div>
-                <div class="store-name flex col j-c-c" onclick="scrollUp()">
-                    <h1 class="orange-font">JCD</h1>
-                    <h1>BBQ</h1>    
+                <div class="flex j-c-c" onclick="scrollUp()">
+                    <img src="./images/JCD-LOGO-w.png" alt="JCD Logo" id="logo-end"> 
                 </div>
                 <div class="relative" style="display: none;"></div>
                 <div id="white-background"></div>
@@ -188,14 +184,10 @@
                                     <span class="orange-font">JCD</span>BBQ
                                 </span>
                             </h1>
-                            <p id="where">where Flavor and Tradition meet.</p>
                         </div>
                         <div>
                             <p id="subtitle">
-                                Dive into an authentic Korean BBQ experience, sizzle with excitement, <br> 
-                                and savor the essence of Korean cuisine at its finest. <br>
-                                Join us for a mouthwatering journey of grilled perfection <br>
-                                and discover the rich tapestry of flavors that define our restaurant.
+                                JCD has been a family owned and operating business since 2003 and strives to deliver the best authentic experience in Korean barbecue. <br>JCD K-BBQ uses fresh quality ingredient made to order and offers a selection of premium meats, banchans (side dishes), traditional Korean favorites and specialties from our family recipe. 
                             </p>
                         </div>    
                     </div>
