fix scroll default padding and minor layout issues

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <span></span>
             <span></span>
             <span></span> 
-            <ul class="flex col a-i-c" id="menu">
+            <ul class="flex col j-c-c a-i-c" id="menu">
                 <a href="./index.html"><li>Home</li></a>
                 <a onclick="openPDF()"><li>Menu</li></a>
                 <a href="tel:+1 503 644 7378"><li>Contact</li></a>
@@ -198,9 +198,9 @@
                 </div>
             </div>
             <div class="flex col j-c-c" id="footer">
-                <p class="white-font">Copyright &copy; 2023</p>
-                <p>Web Design & Dev <a href="https://www.hayeong.website" target="_blank" class="white-font hayeong">Hayeong Pyeon</a></p>
-                <p>Icons by <a href="https://icons8.com/icons" target="_blank">ICON8</a> & Photos by <a href="https://www.pexels.com/" target="_blank">Pexels</a></p>
+                <p class="white-font">Copyright &copy; 2024</p>
+                <p>Web Dev & Design <a href="https://www.hayeong.website" target="_blank" class="white-font hayeong">Hayeong Pyeon</a></p>
+                <p class="copyright">Icons by <a href="https://icons8.com/icons" target="_blank">ICON8</a> & Photos by <a href="https://www.pexels.com/" target="_blank">Pexels</a></p>
             </div>
         </section>
     </main>
